--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -73,5 +73,6 @@
 <!-- Bootstrap Core JavaScript -->
 <script src="//cdn.bootcss.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 <script src="//cdn.bootcss.com/angular.js/1.4.3/angular.min.js"></script>
+<script src='@routes.Assets.versioned("javascripts/run_prettify.js")' type="text/javascript"></script>
 </body>
 </html>
