--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -19,7 +19,6 @@
     <link href='@routes.Assets.versioned("font-awesome/css/font-awesome.min.css")' rel="stylesheet">
     <link href="http://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic" rel="stylesheet"
           type="text/css">
-    <link href="//cdn.bootcss.com/prettify/r298/prettify.css" rel="stylesheet">
     <title>@title</title>
 
 </head>
@@ -74,6 +73,6 @@
 <!-- Bootstrap Core JavaScript -->
 <script src="//cdn.bootcss.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 <script src="//cdn.bootcss.com/angular.js/1.4.3/angular.min.js"></script>
-<script src="//cdn.bootcss.com/prettify/r298/run_prettify.min.js"></script>
+<script src='@routes.Assets.versioned("javascripts/run_prettify.js")' type="text/javascript"></script>
 </body>
 </html>
