syntax highlighting java code

--- a/app/views/tutorial/tutorial_03.scala.html
+++ b/app/views/tutorial/tutorial_03.scala.html
@@ -10,7 +10,7 @@
 </ol>
 <h3>1.定义ATM生命周期(状态机)</h3>
 我们使用Java接口，按照Lifecycle规定的<a>语法格式</a>定义ATM的生命周期。
-<pre>
+<pre class="prettyprint">
 @@StateMachine  <comment>//1.用@@StateMachine来声明该接口定义的是一个状态机（包括状态集合、事件集合和条件集合。）</comment>
 public interface ATMLifecycle {
 
