add css for mobile

--- a/app/views/tutorial/tutorial.scala.html
+++ b/app/views/tutorial/tutorial.scala.html
@@ -4,7 +4,7 @@
 
 <p>了解Lifecycle的一个很好的方式是学习这个入门教程，它将告诉你如何使用Lifecycle框架来增强你的应用。这个应用将构建一个ATM系统，给客户提供存钱和取钱服务。</p>
 
-<p><img class="diagram" src="/assets/images/tutorial/atm-tutorial.png" width="60%" height="413" alt="demo
+<p><img class="diagram" src="/assets/images/tutorial/atm-tutorial.png" width="50%" height="50%" alt="demo
 application running in the browser"></p>
 
 <p>跟随这个入门教程来了解Lifecycle如何使得开发更简单和更健壮。</p>
