--- a/public/stylesheets/landing-page.css
+++ b/public/stylesheets/landing-page.css
@@ -196,3 +196,47 @@ p.copyright {
     position:relative;
     padding-bottom:120px;
 }
+
+@media(max-width:767px) {
+    .main-body-grid {
+        margin-top:0.5em;
+        padding-top: 0;
+        position:relative;
+    }
+
+    .main-body-grid > .grid-left,
+    .main-body-grid > .grid-right {
+        padding-top:0 0;
+    }
+
+    .main-body-grid > .grid-left {
+        position:relative;
+        bottom:0;
+        overflow:none;
+        float: none;
+        margin-left: 0;
+        padding-left: 0;
+    }
+
+    .main-body-grid > .grid-left {
+        width:100%;
+        height:10%;
+    }
+
+    .main-body-grid > .grid-right {
+        margin-top:0.5em;
+        margin-left:0em;
+        position:relative;
+    }
+
+    .main-body-grid .side-navigation {
+        position:relative;
+        padding-bottom:120px;
+        padding-left:0;
+        margin-left:0;
+    }
+
+    .main-body-grid .naked-list {
+        padding-left: 0;
+    }
+}
